syntax = "proto3";

package keyper.v1;

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/RomanAgaltsev/keyper/pkg/keyper/v1;keyper";

enum SecretType {
    SECRET_TYPE_UNSPECIFIED = 0;
    SECRET_TYPE_CREDENTIALS = 1;
    SECRET_TYPE_TEXT = 2;
    SECRET_TYPE_BINARY = 3;
    SECRET_TYPE_CARD = 4;
}

message Secret {
    optional string id = 1 [
        (buf.validate.field).string.uuid = true
    ];

    string name = 2 [
        (buf.validate.field).required = true,
        (buf.validate.field).string.min_len = 1
    ];

    SecretType type = 3 [
        (buf.validate.field).required = true        
    ];


    bytes metadata = 4 [
        (buf.validate.field).required = true,
        (buf.validate.field).bytes.min_len = 1        
    ];

    optional bytes data = 5 [
        (buf.validate.field).bytes.min_len = 1        
    ];

    optional string comment = 6;

    optional google.protobuf.Timestamp created_at = 7;

    optional google.protobuf.Timestamp updated_at = 8;
}

// CreateSecret messages

message CreateSecretResult {
    optional string id = 1 [
        (buf.validate.field).string.uuid = true
    ];
    optional string error = 2;
}

message CreateSecretV1Request {
    Secret secret = 1 [
        (buf.validate.field).required = true
    ];
}

message CreateSecretV1Response {
    CreateSecretResult result = 1 [
        (buf.validate.field).required = true
    ];
}

// GetSecret messages

message GetSecretResult {
    optional Secret secret = 1;
    optional string error = 2;
}

message GetSecretV1Request {
    string id = 1 [
        (buf.validate.field).required = true,
        (buf.validate.field).string.uuid = true
    ];
}

message GetSecretV1Response {
    GetSecretResult result = 1 [
        (buf.validate.field).required = true
    ];
}

// ListSecrets messages

message ListSecretsV1Request {}

message ListSecretsV1Response {
    repeated Secret secret = 1;
}

// UpdateSecret messages

message UpdateSecretResult {
    optional string error = 1;
}

message UpdateSecretV1Request {
    Secret secret = 1 [
        (buf.validate.field).required = true
    ];
}

message UpdateSecretV1Response {
    UpdateSecretResult result = 1 [
        (buf.validate.field).required = true
    ];
}

// DeleteSecret messages

message DeleteSecretResult {
    optional string error = 1;
}

message DeleteSecretV1Request {
    string id = 1 [
        (buf.validate.field).required = true,
        (buf.validate.field).string.uuid = true
    ];
}

message DeleteSecretV1Response {
    DeleteSecretResult result = 1 [
        (buf.validate.field).required = true
    ];
}